lib/src/compiler/tests/testdata/errors/28.out
error[E107]: unknown identifier `undeclared_ident`
 --> line:3:5
  |
3 |     undeclared_ident
  |     ^^^^^^^^^^^^^^^^ this identifier has not been declared
  |